kubernetes/all-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: all-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - atgc.sltn.dev
        - news.sltn.dev
        - advancedtelegeneticcounseling.com
        - news.advancedtelegeneticcounseling.com
      secretName: letsencrypt-prod
  rules:
    - host: atgc.sltn.dev
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
    - host: news.sltn.dev
      http:
        paths:
          - backend:
              serviceName: ghost
              servicePort: 80
    - host: advancedtelegeneticcounseling.com
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 80
    - host: news.advancedtelegeneticcounseling.com
      http:
        paths:
          - backend:
              serviceName: ghost
              servicePort: 80
